# aiagentskills-site-kit

./: .gitignore  .pubignore  AiAgentSkillsSiteKit.podspec  CHANGELOG.md  Cargo.toml  Dockerfile  aiagentskills-site-kit-0.1.0-1.rockspec  aiagentskills-site-kit.gemspec  aiagentskills.go  aiagentskills_test.go  composer.json  go.mod  jsr.json  mix.exs  mod.ts  mod_test.ts  package.json  pom.xml  publish-record.csv  publish-record.json  publish-record.md  pubspec.yaml  pyproject.toml  test_lua.lua  test_node.js  test_python.py  test_ruby.rb
.github/workflows/: publish-cocoapods.yml
Sources/AiAgentSkillsSiteKit/: SiteKit.swift
aiagentskills_site_kit/: __init__.py
aur/: .SRCINFO  PKGBUILD
chocolatey/: README.md  aiagentskills-site-kit.nuspec
chocolatey/tools/: AiAgentSkillsSiteKit.psm1
cran/aiAgentSkills/: DESCRIPTION  LICENSE  NAMESPACE
docker/: aiagentskills-site-kit
examples/basic/: main.tf
flathub/: ai-agent-skills.sh  net.aiagentskills.AIAgentSkills.desktop  net.aiagentskills.AIAgentSkills.metainfo.xml  net.aiagentskills.AIAgentSkills.yml
github-packages/: index.js  package.json
helm/ai-agent-skills/: Chart.yaml  README.md  values.yaml
lib/: aiagentskills_site_kit.dart  aiagentskills_site_kit.ex
lib/ai_agent_skills/: site_kit.rb
lua/: aiagentskills_site_kit.lua
nuget/: AiAgentSkillsSiteKit.sln
open-vsx/: README.md  package.json
perl/: MANIFEST
src/: AiAgentSkillsLinks.php
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
test/: aiagentskills_site_kit_dart_test.dart  aiagentskills_site_kit_test.exs
(+21 files in other folders)
