[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiagentskills-site-kit"
version = "0.1.0"
description = "Small metadata and URL helpers for AI Agent Skills, a curated Claude, Codex, and AI agent skills directory."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "AI Agent Skills", email = "hello@aiagentskills.net" }]
keywords = ["aiagentskills", "skills", "agents", "claude", "codex"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://aiagentskills.net"
Source = "https://github.com/bbwdadfg/aiagentskills-site-kit"
"AI agent skills directory" = "https://aiagentskills.net/skills/"
"Submit an AI agent skill" = "https://aiagentskills.net/submit/"
